--- a/TuanQD_MockProject/app/build.gradle
+++ b/TuanQD_MockProject/app/build.gradle
@@ -7,11 +7,12 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.baseproject"
+        applicationId "com.tuanqd.mockproject"
         minSdk 28
         targetSdk 32
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -67,6 +68,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
 
     // Saved state module for ViewModel
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.vectordrawable:vectordrawable:1.1.0"
     implementation "com.google.android.material:material:1.7.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     implementation 'androidx.appcompat:appcompat:1.4.2'
