--- a/TuanQD_MockProject/app/src/main/AndroidManifest.xml
+++ b/TuanQD_MockProject/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.baseproject">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.BaseProject"
         tools:targetApi="31">
         <activity
-            android:name="com.example.baseproject.view.SplashTheme"
+            android:name="com.tuanqd.mockproject.main.SplashTheme"
             android:exported="true"
             android:theme="@style/ThemeSpl">
             <intent-filter>
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.baseproject.view.MainActivity"
+            android:name="com.tuanqd.mockproject.main.MainActivity"
             android:exported="true"
             android:label="">
             <meta-data android:name="android.app.searchable"
