--- a/TuanQD_MockProject/app/src/main/AndroidManifest.xml
+++ b/TuanQD_MockProject/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.baseproject">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
