--- a/TuanQD_MockProject/app/build.gradle
+++ b/TuanQD_MockProject/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     // Lifecycles only (without ViewModel or LiveData)
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
+    // mediaSessionCompat
+    implementation "androidx.media:media:1.6.0"
 
     // Saved state module for ViewModel
     implementation "androidx.recyclerview:recyclerview:1.2.1"
