--- a/TuanQD_MockProject/app/src/main/AndroidManifest.xml
+++ b/TuanQD_MockProject/app/src/main/AndroidManifest.xml
@@ -2,14 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.baseproject">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
-        android:requestLegacyExternalStorage="true"
+        android:name="com.tuanqd.mockproject.mediaplayer.Notification"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BaseProject"
@@ -27,9 +31,13 @@
             android:name="com.tuanqd.mockproject.main.MainActivity"
             android:exported="true"
             android:label="">
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
+
+        <service android:name="com.tuanqd.mockproject.mediaplayer.MusicService" />
+        <receiver android:name="com.tuanqd.mockproject.mediaplayer.MusicBroadcastReceiver" />
     </application>
 
 </manifest>
