--- a/TuanQD_MockProject/app/build.gradle
+++ b/TuanQD_MockProject/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation "androidx.media:media:1.6.0"
 
     // Saved state module for ViewModel
+    implementation "com.google.android.material:material:1.6.1"
+
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.vectordrawable:vectordrawable:1.1.0"
