--- a/TuanQD_MockProject/app/build.gradle
+++ b/TuanQD_MockProject/app/build.gradle
@@ -42,6 +42,16 @@ dependencies {
     def room_version = "2.4.2"
     def nav_version = "2.5.0"
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'androidx.annotation:annotation:1.4.0'
+    implementation ("com.github.bumptech.glide:glide:4.11.0@aar") {
+        transitive = true
+    }
+    implementation ("com.github.bumptech.glide:glide:4.11.0") {
+        exclude group: "com.android.support"
+    }
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
