--- a/TuanQD_MockProject/app/build.gradle
+++ b/TuanQD_MockProject/app/build.gradle
@@ -36,11 +36,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.car.ui:car-ui-lib:+'
-    def lifecycle_version = "2.6.0-alpha01"
-    def arch_version = "2.1.0"
-    def room_version = "2.4.2"
-    def nav_version = "2.5.0"
+
+
+// circle image
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -53,6 +52,11 @@ dependencies {
         exclude group: "com.android.support"
     }
     // Java language implementation
+    implementation 'com.android.car.ui:car-ui-lib:+'
+    def lifecycle_version = "2.6.0-alpha01"
+    def arch_version = "2.1.0"
+    def room_version = "2.4.2"
+    def nav_version = "2.5.0"
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
